Working on the pages runda_2 and runda_bez : The presentation of a rund and the presentation of the heat during qualif (two couples)

--- a/runda_2.htm
+++ b/runda_2.htm
@@ -116,10 +116,10 @@ setTimeout('sdt()',800);
   <iframe  name="pali" id="pali"  src="pali.htm"  scrolling="no" class ="glavna2" ></iframe>     
         <div class="header">
             <div class="left">
-                      #fed_logo#
+                <img src="./img-cs17/logo-srrc-white.png" class="srrc-logo" />
             </div><!-- end left -->
             <div class="right">
-                 #org_logo#
+                <img src="./img-cs17/logo-championnat-white-header.png" height="130" />
             </div><!-- end right -->
             <div class="center">
                 <p class="eventTitle">#naziv_event#</p><!-- end eventTitle -->
