--- a/runda_bez.htm
+++ b/runda_bez.htm
@@ -8,7 +8,7 @@
     <body class="mainpage2_bg">
         <div class="header mainScreen">
             <div class="left">
-               <img src="./img-cs17/logo-srrc.png" />
+               <img src="./img-cs17/logo-srrc-white.png" class="srrc-logo" />
             </div><!-- end left -->
             <div class="right">
                <img src="./img-cs17/logo-frequence-rock-onde.png" />
