Working on the page for the final heat result (1 couple) - runda_1.htm

--- a/runda_2.htm
+++ b/runda_2.htm
@@ -111,7 +111,7 @@ setTimeout('sdt()',800);
 //-->
 </SCRIPT>
 </head>
-    <body LANGUAGE=javascript onload="return window_onload()" class="mainpage2_bg">
+    <body LANGUAGE=javascript onload="return window_onload()">
     <input type="hidden"  id="last_pali" value="">
   <iframe  name="pali" id="pali"  src="pali.htm"  scrolling="no" class ="glavna2" ></iframe>     
         <div class="header">
