--- a/teve.htm
+++ b/teve.htm
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <title>Glavni Ekran</title> <!-- RGU : Ranking list until 8 couples -->
-        <link rel="stylesheet" href="css/style.css" />
+        <link rel="stylesheet" href="css/style-cs17.css" />
           <SCRIPT ID=clientEventHandlersJS LANGUAGE=javascript>
 	<!--
 	function gasi()
@@ -24,15 +24,16 @@
 	 <input type="hidden"  id="koliko" value=#kol#>
         <div class="header">
             <div class="left">
-                      #fed_logo#
+                <img src="./img-cs17/logo-srrc-white.png" class="srrc-logo" />
             </div><!-- end left -->
+            <div class="right">
+                <img src="./img-cs17/logo-championnat-white-header.png" height="130" />
+            </div><!-- end right -->
             <div class="center">
                 <p class="eventTitle">#naziv_event#</p><!-- end eventTitle -->
-                <p class="competitionName">#naziv_comp#</p><!-- end competitonName -->
+                <p class="competitionName">#naziv_comp# - #runda#</p><!-- end competitonName -->
+                <p class="heat">(Heat: #rbr# / #uk#)</p><!-- head -->
             </div><!-- end center -->
-            <div class="right">
-                 #org_logo#
-            </div><!-- end right -->
         </div><!-- end header -->
         <div id="mainArea">
             <table>
@@ -86,19 +87,5 @@
                 </tr>
             </table>
         </div><!-- end mainArea -->
-        <div id="footer">
-            <div class="left">
-                   
-            </div><!-- end left -->
-            <div class="center">
-            	<img src="banner.jpg">
-            </div><!-- end center -->
-            <div class="right">
-               
-            </div><!-- end right -->
-            <div class="disclamer">
-                LPRDS &copy; - Linum Protocol &amp; Results Display System - Design and presentation by LINUM
-            </div><!-- end disclamer -->
-        </div><!-- end footer -->
     </body>
 </html>
