--- a/glavni.htm
+++ b/glavni.htm
@@ -1,35 +1,26 @@
-<head>
+<!DOCTYPE html>
+<html>
+    <head>
         <meta charset="utf-8" />
         <title>Main Screen</title> <!-- RGU : This is the main page of the competition -->
-        <link rel="stylesheet" href="css/style.css" />
+        <link rel="stylesheet" href="css/style-cs17.css" />
     </head>
     <body class="mainpage_bg">
         <div class="header mainScreen">
             <div class="left">
-               #fed_logo# 
+               <img src="./img-cs17/logo-srrc-white.png" class="srrc-logo" />
             </div><!-- end left -->
-            <div class="center">
-            </div><!-- end center -->
             <div class="right">
-                #org_logo#
+               <img src="./img-cs17/logo-frequence-rock-onde.png" />
             </div><!-- end right -->
+            <div class="center">
+                <h1 class="headerTitle">#naziv_event#</h1>
+            </div><!-- end center -->
         </div><!-- end header -->
         <div id="mainArea" >
             <h1 class="competitionTitle">#naziv_event#</h1>
             <p class="place">#mjesto_event#</p><!-- end place -->
             <p class="date">#datum_event#</p><!-- end date -->
         </div><!-- end mainArea -->
-         <div id="footerMainScreen">
-            <div class="left">
-                &nbsp;
-            </div><!-- end left -->
-            <div class="center">
-            </div><!-- end center -->
-            <div class="right">
-               &nbsp;
-            </div><!-- end right -->
-            <div class="disclamer">
-                LPRDS &copy; - Linum Protocol &amp; Results Display System - Design and presentation by LINUM
-            </div><!-- end disclamer -->
-        </div><!-- end footer --> 
  </body>
+</html>
