Fix header of some pages and the Title of each pages in english

--- a/runda_2.htm
+++ b/runda_2.htm
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title>Glavni Ekran</title> <!-- RGU : Heat for qualif, 2 couples -->
+        <title>Heat by two - qualifications</title> <!-- RGU : Heat for qualif, 2 couples -->
         <link rel="stylesheet" href="css/style-cs17.css" />
 <SCRIPT ID=clientEventHandlersJS LANGUAGE=javascript>
 <!--
