--- a/runda_njs.htm
+++ b/runda_njs.htm
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title>Glavni Ekran</title> <!-- RGU : NJS result for a heat of a category -->
+        <title>Ranking list - category</title> <!-- RGU : NJS result for a heat of a category -->
         <link rel="stylesheet" href="css/style-cs17.css" />
     </head>
     <body>
@@ -26,7 +26,7 @@
                     <td>Pos.</td>
                     <td>Stn</td>
                     <td>Competitor</td>
-                    <td>points</td>
+                    <td>Points</td>
                 </tr>
                 <tr class="tableRows">
                     <td class="position">po1</td>
