--- a/runda_start.htm
+++ b/runda_start.htm
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title>Glavni Ekran</title> <!-- RGU : The startlist of a categorie -->
+        <title>Starting list</title> <!-- RGU : The start list of a categorie -->
         <link rel="stylesheet" href="css/style-cs17.css" />
     </head>
     <body>
@@ -16,7 +16,7 @@
             <div class="center">
                 <p class="eventTitle">#naziv_event#</p><!-- end eventTitle -->
                 <p class="competitionName">#naziv_comp# - #runda#</p><!-- end competitonName -->
-                <p class="heat">(Heat: #rbr# / #uk#)</p><!-- head -->
+                <p class="competitionName">Startlist</p><!-- head -->
             </div><!-- end center -->
         </div><!-- end header -->
         <div id="mainArea">
