--- a/teve.htm
+++ b/teve.htm
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title>Glavni Ekran</title> <!-- RGU : Ranking list until 8 couples -->
+        <title>Ranking list - until 8</title> <!-- RGU : Ranking list until 8 couples -->
         <link rel="stylesheet" href="css/style-cs17.css" />
           <SCRIPT ID=clientEventHandlersJS LANGUAGE=javascript>
 	<!--
@@ -31,8 +31,8 @@
             </div><!-- end right -->
             <div class="center">
                 <p class="eventTitle">#naziv_event#</p><!-- end eventTitle -->
-                <p class="competitionName">#naziv_comp# - #runda#</p><!-- end competitonName -->
-                <p class="heat">(Heat: #rbr# / #uk#)</p><!-- head -->
+                <p class="competitionName">#naziv_comp#</p><!-- end competitonName -->
+                <p class="competitionName">Ranking list</p><!-- head -->
             </div><!-- end center -->
         </div><!-- end header -->
         <div id="mainArea">
