--- a/runda_1.htm
+++ b/runda_1.htm
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title>Glavni Ekran</title> <!-- RGU : Heat for the final - One couple -->
+        <title>Heat by one - final</title> <!-- RGU : Heat for the final - One couple -->
         <link rel="stylesheet" href="css/style-cs17.css" />
 <SCRIPT ID=clientEventHandlersJS LANGUAGE=javascript>
 <!--
