Fix the display of the main screen and the category opening page

--- a/glavni.htm
+++ b/glavni.htm
@@ -18,6 +18,7 @@
             </div><!-- end center -->
         </div><!-- end header -->
         <div id="mainArea" >
+            <img src="./img-cs17/logo-championnat-header.png" />
             <h1 class="competitionTitle">#naziv_event#</h1>
             <p class="place">#mjesto_event#</p><!-- end place -->
             <p class="date">#datum_event#</p><!-- end date -->
