--- a/runda_bez.htm
+++ b/runda_bez.htm
@@ -18,9 +18,10 @@
             </div><!-- end center -->
         </div><!-- end header -->
         <div id="mainArea">
+            <img src="./img-cs17/logo-championnat-header.png" />
             <h1 class="competitionTitle">#naziv_comp#<br>#runda#</h1>
-            <p class="place"> #mjesto_event#</p><!-- end place -->
-            <p class="date"> #datum_event#</p><!-- end date -->
+            <p class="place no-margin-padding"> #mjesto_event#</p><!-- end place -->
+            <p class="date no-margin-padding"> #datum_event#</p><!-- end date -->
         </div><!-- end mainArea -->  
 		</body>
 </html>
