Configure the pages teve6 and teve8 to display result by 6 or 8 participants

--- a/teve8.htm
+++ b/teve8.htm
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <title>Glavni Ekran</title>
-        <link rel="stylesheet" href="css/style.css" />
+        <link rel="stylesheet" href="css/style-cs17.css" />
           <SCRIPT ID=clientEventHandlersJS LANGUAGE=javascript>
 	<!--
 	function gasi()
@@ -24,15 +24,16 @@
       <input type="hidden"  id="koliko" value=#kol#>
         <div class="header">
             <div class="left">
-                      #fed_logo#
+                <img src="./img-cs17/logo-srrc-white.png" class="srrc-logo" />
             </div><!-- end left -->
+            <div class="right">
+                <img src="./img-cs17/logo-championnat-white-header.png" height="130" />
+            </div><!-- end right -->
             <div class="center">
                 <p class="eventTitle">#naziv_event#</p><!-- end eventTitle -->
                 <p class="competitionName">#naziv_comp#</p><!-- end competitonName -->
+                <p class="competitionName">Ranking list</p><!-- head -->
             </div><!-- end center -->
-            <div class="right">
-                 	#org_logo#
-            </div><!-- end right -->
         </div><!-- end header -->
         <div id="mainArea">
             <table>
@@ -42,49 +43,49 @@
                     <td>#comp#</td>
                     <td>#kval#</td>
                 </tr>
-                <tr class="tableRows eight" id="red_1">
+                <tr class="tableRows8 eight" id="red_1">
                     <td class="position">#poz_1#</td>
                     <td class="startNo">#stb_1#</td>
                     <td class="competitorName">#name_1#</td>
                     <td class="otherInfo">#kval_1#</td>
                 </tr>
-                <tr class="tableRows eight" id="red_2">
+                <tr class="tableRows8 eight" id="red_2">
                      <td class="position">#poz_2#</td>
                     <td class="startNo">#stb_2#</td>
                     <td class="competitorName">#name_2#</td>
                     <td class="otherInfo">#kval_2#</td>
                 </tr>
-                <tr class="tableRows eight" id="red_3">
+                <tr class="tableRows8 eight" id="red_3">
                     <td class="position">#poz_3#</td>
                     <td class="startNo">#stb_3#</td>
                     <td class="competitorName">#name_3#</td>
                     <td class="otherInfo">#kval_3#</td>
                 </tr>
-                <tr class="tableRows eight" id="red_4">
+                <tr class="tableRows8 eight" id="red_4">
                       <td class="position">#poz_4#</td>
                     <td class="startNo">#stb_4#</td>
                     <td class="competitorName">#name_4#</td>
                     <td class="otherInfo">#kval_4#</td>
                 </tr>
-                <tr class="tableRows eight" id="red_5">
+                <tr class="tableRows8 eight" id="red_5">
                       <td class="position">#poz_5#</td>
                     <td class="startNo">#stb_5#</td>
                     <td class="competitorName">#name_5#</td>
                     <td class="otherInfo">#kval_5#</td>
                 </tr>
-                <tr class="tableRows eight" id="red_6">
+                <tr class="tableRows8 eight" id="red_6">
                       <td class="position">#poz_6#</td>
                     <td class="startNo">#stb_6#</td>
                     <td class="competitorName">#name_6#</td>
                     <td class="otherInfo">#kval_6#</td>
                 </tr>
-                <tr class="tableRows eight" id="red_7">
+                <tr class="tableRows8 eight" id="red_7">
                       <td class="position">#poz_7#</td>
                     <td class="startNo">#stb_7#</td>
                     <td class="competitorName">#name_7#</td>
                     <td class="otherInfo">#kval_7#</td>
                 </tr>
-                <tr class="tableRows eight" id="red_8">
+                <tr class="tableRows8 eight" id="red_8">
                       <td class="position">#poz_8#</td>
                     <td class="startNo">#stb_8#</td>
                     <td class="competitorName">#name_8#</td>
@@ -92,18 +93,5 @@
                 </tr>                
             </table>
         </div><!-- end mainArea -->
-        <div id="footer">
-            <div class="left">
-                  
-            </div><!-- end left -->
-            <div class="center">
-            </div><!-- end center -->
-            <div class="right">
-                <img src="banner.jpg">
-            </div><!-- end right -->
-            <div class="disclamer">
-                LPRDS &copy; - Linum Protocol &amp; Results Display System - Design and presentation by LINUM
-            </div><!-- end disclamer -->
-        </div><!-- end footer -->
     </body>
 </html>
