Add the style for the yellow/red and increase the font-size for the final (runda_1.htm)

--- a/runda_1.htm
+++ b/runda_1.htm
@@ -89,7 +89,7 @@ setTimeout('sdt()',800);
                 <div class="pairOne one">
                     <p class="pairNo">#stb_1#</p><!-- end pairNo -->
                     <p class="pairName one">#naziv_1#</p><!-- pairName -->
-                    <div class="pairCountry">
+                    <div class="pairCountry one">
                         #drzava_1#
                     </div><!-- end pairCountry -->
                     <div class="pairResult one" id="rez_1">
