Create the skeleton for the CS 18 template. Working onthe page runda_2.htm

--- a/glavni.htm
+++ b/glavni.htm
@@ -8,7 +8,7 @@
     <body class="mainpage_bg">
         <div class="header mainScreen">
             <div class="left">
-               <img src="./img-cs17/logo-srrc-white.png" class="srrc-logo" />
+               <img src="./img-cs18/logo-championnat-white-header.png" height="120" />
             </div><!-- end left -->
             <div class="right">
                <img src="./img-cs17/logo-frequence-rock-onde.png" />
