--- a/runda_2.htm
+++ b/runda_2.htm
@@ -205,6 +205,20 @@ setTimeout('sdt()',800);
 	<!-- end floor2 -->		
 	
             </div><!-- end row -->
+
+            <div class="footer">
+                    <img src="./img-cs18/logo-srrc-white.png" class="footer-logo" />
+                    <img src="./img-cs18/logo-championnat-white-header.png" class="footer-logo" />
+                    <img src="./img-cs18/logo-srrc-white.png" class="footer-logo" />
+                    <img src="./img-cs18/logo-championnat-white-header.png" class="footer-logo" />
+                    <img src="./img-cs18/logo-srrc-white.png" class="footer-logo" />
+                    <img src="./img-cs18/logo-championnat-white-header.png" class="footer-logo" />
+                    <img src="./img-cs18/logo-srrc-white.png" class="footer-logo" />
+                    <img src="./img-cs18/logo-championnat-white-header.png" class="footer-logo" />
+                    <img src="./img-cs18/logo-srrc-white.png" class="footer-logo" />
+                    <img src="./img-cs18/logo-championnat-white-header.png" class="footer-logo" />
+            </div>
+
         </div><!-- end mainArea -->
     </body>
 </html>
