--- a/runda_2.htm
+++ b/runda_2.htm
@@ -116,7 +116,7 @@ setTimeout('sdt()',800);
   <iframe  name="pali" id="pali"  src="pali.htm"  scrolling="no" class ="glavna2" ></iframe>     
         <div class="header">
             <div class="left">
-                <img src="./img-cs18/logo-championnat-white-header.png" height="120" />
+                <img src="./img-cs18/logo-championnat-white-header.png" class="event-logo" />
             </div><!-- end left -->
             <div class="right">
                 <img src="./img-cs18/logo-srrc-white.png" class="srrc-logo" />
@@ -216,7 +216,6 @@ setTimeout('sdt()',800);
                     <img src="./img-cs18/logo-srrc-white.png" class="footer-logo" />
                     <img src="./img-cs18/logo-championnat-white-header.png" class="footer-logo" />
                     <img src="./img-cs18/logo-srrc-white.png" class="footer-logo" />
-                    <img src="./img-cs18/logo-championnat-white-header.png" class="footer-logo" />
             </div>
 
         </div><!-- end mainArea -->
