working on the file runda_1.htm

--- a/runda_1.htm
+++ b/runda_1.htm
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <title>Heat by one - final</title> <!-- RGU : Heat for the final - One couple -->
-        <link rel="stylesheet" href="css/style-cs17.css" />
+        <link rel="stylesheet" href="css/style-cs18.css" />
 <SCRIPT ID=clientEventHandlersJS LANGUAGE=javascript>
 <!--
 function gasi()
@@ -73,7 +73,7 @@ setTimeout('sdt()',800);
   <iframe  name="pali" id="pali"  src="pali.htm"  scrolling="no" class ="glavna2" ></iframe>     
         <div class="header">
             <div class="left">
-                <img src="./img-cs18/logo-championnat-white-header.png" height="120" />
+                <img src="./img-cs18/logo-championnat-white-header.png" class="event-logo" />
             </div><!-- end left -->
             <div class="right">
                 <img src="./img-cs18/logo-srrc-white.png" class="srrc-logo" />
@@ -88,17 +88,17 @@ setTimeout('sdt()',800);
             <div class="row jedanPar">
                 <div class="pairOne one">
                     <p class="pairNo">#stb_1#</p><!-- end pairNo -->
-                    <p class="pairName one">#naziv_1#</p><!-- pairName -->
-                    <div class="pairCountry one">
+                    <p class="pairName">#naziv_1#</p><!-- pairName -->
+                    <div class="pairCountry">
                         #drzava_1#
                     </div><!-- end pairCountry -->
-                    <div class="pairResult one" id="rez_1">
+                    <div class="pairResult" id="rez_1">
                                #ko_1# 
                     </div><!-- end pairResult -->
                     <div class="pairPlace" id="place_1">
                        #WINNER_1#
                     </div><!-- end pairPlace -->
-                    <div class="marks">
+                    <div class="marks two">
                         <ul>
                             <li id="s11"  ><span><i class="icon-ok"></i></span>A</li>
                             <li id="s12"><span><i class="icon-ok"></i></span>B</li>
