working on runda_njs.htm

--- a/runda_njs.htm
+++ b/runda_njs.htm
@@ -3,12 +3,12 @@
     <head>
         <meta charset="utf-8" />
         <title>Ranking list - category</title> <!-- RGU : NJS result for a heat of a category -->
-        <link rel="stylesheet" href="css/style-cs17.css" />
+        <link rel="stylesheet" href="css/style-cs18.css" />
     </head>
     <body>
         <div class="header">
             <div class="left">
-                <img src="./img-cs18/logo-championnat-white-header.png" height="120" />
+                <img src="./img-cs18/logo-championnat-white-header.png" class="event-logo" />
             </div><!-- end left -->
             <div class="right">
                 <img src="./img-cs18/logo-srrc-white.png" class="srrc-logo" />
