--- a/teve.htm
+++ b/teve.htm
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <title>Ranking list - until 8</title> <!-- RGU : Ranking list until 8 couples -->
-        <link rel="stylesheet" href="css/style-cs17.css" />
+        <link rel="stylesheet" href="css/style-cs18.css" />
           <SCRIPT ID=clientEventHandlersJS LANGUAGE=javascript>
 	<!--
 	function gasi()
@@ -24,7 +24,7 @@
 	 <input type="hidden"  id="koliko" value=#kol#>
         <div class="header">
             <div class="left">
-                <img src="./img-cs18/logo-championnat-white-header.png" height="120" />
+                <img src="./img-cs18/logo-championnat-white-header.png" class="event-logo" />
             </div><!-- end left -->
             <div class="right">
                 <img src="./img-cs18/logo-srrc-white.png" class="srrc-logo" />
