Works on some pages

--- a/glavni.htm
+++ b/glavni.htm
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title>Main Screen</title> <!-- RGU : This is the main page of the competition -->
+        <title>Main Screen</title> <!-- RGU TODO : This is the main page of the competition -->
         <link rel="stylesheet" href="css/style-cs17.css" />
     </head>
     <body class="mainpage_bg">
