--- a/proglasenje.htm
+++ b/proglasenje.htm
@@ -49,7 +49,7 @@ function window_onload() {
             <div class="center">
                 <p class="eventTitle">#naziv_event#</p><!-- end eventTitle -->
                 <p class="competitionName">#naziv_comp#</p><!-- end competitonName -->
-                <p class="competitionName">Winner Ceremony</p>
+                <p class="competitionName">Podium</p>
             </div><!-- end center -->
         </div><!-- end header -->
         
