--- a/runda_1.htm
+++ b/runda_1.htm
@@ -113,6 +113,19 @@ setTimeout('sdt()',800);
                 </div><!-- end pairOne -->
              
             </div><!-- end row -->
+
+            <div class="footer">
+                    <img src="./img-cs18/logo-srrc-white.png" class="footer-logo" />
+                    <img src="./img-cs18/logo-championnat-white-header.png" class="footer-logo" />
+                    <img src="./img-cs18/logo-srrc-white.png" class="footer-logo" />
+                    <img src="./img-cs18/logo-championnat-white-header.png" class="footer-logo" />
+                    <img src="./img-cs18/logo-srrc-white.png" class="footer-logo" />
+                    <img src="./img-cs18/logo-championnat-white-header.png" class="footer-logo" />
+                    <img src="./img-cs18/logo-srrc-white.png" class="footer-logo" />
+                    <img src="./img-cs18/logo-championnat-white-header.png" class="footer-logo" />
+                    <img src="./img-cs18/logo-srrc-white.png" class="footer-logo" />
+            </div>
+            
         </div><!-- end mainArea -->
     </body>
 </html>
