--- a/runda_bez.htm
+++ b/runda_bez.htm
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title>Category opening</title> <!-- RGU : The presentation of a category -->
+        <title>Category opening</title> <!-- RGU TODO : The presentation of a category -->
         <link rel="stylesheet" href="css/style-cs17.css" />
     </head>
     <body class="mainpage2_bg">
