--- a/runda_njs.htm
+++ b/runda_njs.htm
@@ -71,6 +71,19 @@
                     <td class="otherInfo">tot7</td>     
                 </tr>
             </table>
+
+            <div class="footer">
+                    <img src="./img-cs18/logo-srrc-white.png" class="footer-logo" />
+                    <img src="./img-cs18/logo-championnat-white-header.png" class="footer-logo" />
+                    <img src="./img-cs18/logo-srrc-white.png" class="footer-logo" />
+                    <img src="./img-cs18/logo-championnat-white-header.png" class="footer-logo" />
+                    <img src="./img-cs18/logo-srrc-white.png" class="footer-logo" />
+                    <img src="./img-cs18/logo-championnat-white-header.png" class="footer-logo" />
+                    <img src="./img-cs18/logo-srrc-white.png" class="footer-logo" />
+                    <img src="./img-cs18/logo-championnat-white-header.png" class="footer-logo" />
+                    <img src="./img-cs18/logo-srrc-white.png" class="footer-logo" />
+            </div>
+
         </div><!-- end mainArea -->
     </body>
 </html>
